syntax = "proto3";

package pomerium.identity;
option go_package = "github.com/pomerium/pomerium/pkg/grpc/identity";

import "google/protobuf/struct.proto";

message Provider {
  message StringList { repeated string values = 1; }
  string id = 1;
  string authenticate_service_url = 9;
  string client_id = 2;
  string client_secret = 3;
  string type = 4;
  repeated string scopes = 5;
  // string service_account = 6;
  string url = 7;
  map<string, string> request_params = 8;
  optional StringList access_token_allowed_audiences = 10;
}

message Profile {
  string provider_id = 1;
  bytes id_token = 2;
  bytes oauth_token = 3;
  google.protobuf.Struct claims = 4;
}
